@@ -1,107 +1,271 @@
-import java.util.Arrays;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.stream.Collectors;
+import com.google.common.collect.ImmutableList;
+import com.mojang.datafixers.util.Pair;
 
 public class qx {
-   public static egp.c a(ja<dbc> $$0, Map<bsd, egw> $$1, dvv.b $$2, eha $$3) {
-      return new egp.c($$0, $$1, $$2, $$3);
-   }
+   public static final akl<eis> a = qv.a("village/savanna/town_centers");
+   private static final akl<eis> b = qv.a("village/savanna/terminators");
+   private static final akl<eis> c = qv.a("village/savanna/zombie/terminators");
 
-   private static egp.c a(ja<dbc> $$0, dvv.b $$1, eha $$2) {
-      return a($$0, Map.of(), $$1, $$2);
-   }
-
-   private static egp.c a(ja<dbc> $$0, eha $$1) {
-      return a($$0, Map.of(), dvv.b.e, $$1);
-   }
-
-   public static void a(ql<egp> $$0) {
-      ix<dbc> $$1 = $$0.a(le.az);
-      ix<ehy> $$2 = $$0.a(le.aM);
+   public static void a(qo<eis> $$0) {
+      iy<egn> $$1 = $$0.a(lf.aI);
+      ix<egn> $$2 = $$1.b(sl.g);
+      ix<egn> $$3 = $$1.b(sl.a);
+      ix<egn> $$4 = $$1.b(sl.b);
+      iy<elh> $$5 = $$0.a(lf.aK);
+      ix<elh> $$6 = $$5.b(qw.b);
+      ix<elh> $$7 = $$5.b(qw.j);
+      ix<elh> $$8 = $$5.b(qw.m);
+      iy<eis> $$9 = $$0.a(lf.aM);
+      ix<eis> $$10 = $$9.b(qv.a);
+      ix<eis> $$11 = $$9.b(b);
+      ix<eis> $$12 = $$9.b(c);
       $$0.a(
-         egj.a,
-         new eip(
-            a($$1.b(avq.y), Map.of(bsd.a, new egw(egw.a.b, boa.a(new dbo.c(brn.aB, 1, 1, 1)))), dvv.b.e, eha.c), $$2.b(qq.a), 7, eev.a(dwt.a(0)), true, dvz.a.a
+         a,
+         new eis(
+            $$10,
+            ImmutableList.of(
+               Pair.of(eiq.a("village/savanna/town_centers/savanna_meeting_point_1"), 100),
+               Pair.of(eiq.a("village/savanna/town_centers/savanna_meeting_point_2"), 50),
+               Pair.of(eiq.a("village/savanna/town_centers/savanna_meeting_point_3"), 150),
+               Pair.of(eiq.a("village/savanna/town_centers/savanna_meeting_point_4"), 150),
+               Pair.of(eiq.a("village/savanna/zombie/town_centers/savanna_meeting_point_1", $$6), 2),
+               Pair.of(eiq.a("village/savanna/zombie/town_centers/savanna_meeting_point_2", $$6), 1),
+               Pair.of(eiq.a("village/savanna/zombie/town_centers/savanna_meeting_point_3", $$6), 3),
+               Pair.of(eiq.a("village/savanna/zombie/town_centers/savanna_meeting_point_4", $$6), 3)
+            ),
+            eis.a.b
          )
       );
-      $$0.a(egj.b, new eit(a($$1.b(avq.t), dvv.b.d, eha.a), eit.a.a));
-      $$0.a(egj.c, new eit(a($$1.b(avq.u), dvv.b.d, eha.a), eit.a.b));
-      $$0.a(egj.d, new ejl(a($$1.b(avq.Q), eha.a)));
-      $$0.a(egj.e, new eir(a($$1.b(avq.s), eha.a)));
-      $$0.a(egj.f, new eik(a($$1.b(avq.q), eha.a)));
-      $$0.a(egj.g, new eio(a($$1.b(avq.r), eha.a)));
-      $$0.a(egj.h, new ejf(a($$1.b(avq.G), eha.a), false));
-      $$0.a(egj.i, new ejf(a($$1.b(avq.F), eha.a), true));
-      $$0.a(
-         egj.j,
-         new ejj(
-            a(
-               $$1.b(avq.J),
-               Map.of(bsd.a, new egw(egw.a.a, boa.a(new dbo.c(brn.bn, 1, 1, 1))), bsd.b, new egw(egw.a.a, boa.a(new dbo.c(brn.p, 1, 1, 1)))),
-               dvv.b.e,
-               eha.a
-            )
+      qv.a(
+         $$0,
+         "village/savanna/streets",
+         new eis(
+            $$11,
+            ImmutableList.of(
+               Pair.of(eiq.a("village/savanna/streets/corner_01", $$7), 2),
+               Pair.of(eiq.a("village/savanna/streets/corner_03", $$7), 2),
+               Pair.of(eiq.a("village/savanna/streets/straight_02", $$7), 4),
+               Pair.of(eiq.a("village/savanna/streets/straight_04", $$7), 7),
+               Pair.of(eiq.a("village/savanna/streets/straight_05", $$7), 3),
+               Pair.of(eiq.a("village/savanna/streets/straight_06", $$7), 4),
+               Pair.of(eiq.a("village/savanna/streets/straight_08", $$7), 4),
+               Pair.of(eiq.a("village/savanna/streets/straight_09", $$7), 4),
+               Pair.of(eiq.a("village/savanna/streets/straight_10", $$7), 4),
+               Pair.of(eiq.a("village/savanna/streets/straight_11", $$7), 4),
+               Pair.of(eiq.a("village/savanna/streets/crossroad_02", $$7), 1),
+               Pair.of(eiq.a("village/savanna/streets/crossroad_03", $$7), 2),
+               new Pair[]{
+                  Pair.of(eiq.a("village/savanna/streets/crossroad_04", $$7), 2),
+                  Pair.of(eiq.a("village/savanna/streets/crossroad_05", $$7), 2),
+                  Pair.of(eiq.a("village/savanna/streets/crossroad_06", $$7), 2),
+                  Pair.of(eiq.a("village/savanna/streets/crossroad_07", $$7), 2),
+                  Pair.of(eiq.a("village/savanna/streets/split_01", $$7), 2),
+                  Pair.of(eiq.a("village/savanna/streets/split_02", $$7), 2),
+                  Pair.of(eiq.a("village/savanna/streets/turn_01", $$7), 3)
+               }
+            ),
+            eis.a.a
          )
       );
-      $$0.a(egj.k, new ejh(a($$1.b(avq.H), eha.b)));
-      $$0.a(
-         egj.l,
-         new eiz(
-            a(
-               $$1.b(avq.v),
-               Map.of(bsd.a, new egw(egw.a.b, boa.a(new dbo.c(brn.Y, 1, 2, 4))), bsd.e, new egw(egw.a.b, dbo.a), bsd.d, new egw(egw.a.b, dbo.a)),
-               dvv.b.e,
-               eha.a
-            )
+      qv.a(
+         $$0,
+         "village/savanna/zombie/streets",
+         new eis(
+            $$12,
+            ImmutableList.of(
+               Pair.of(eiq.a("village/savanna/zombie/streets/corner_01", $$7), 2),
+               Pair.of(eiq.a("village/savanna/zombie/streets/corner_03", $$7), 2),
+               Pair.of(eiq.a("village/savanna/zombie/streets/straight_02", $$7), 4),
+               Pair.of(eiq.a("village/savanna/zombie/streets/straight_04", $$7), 7),
+               Pair.of(eiq.a("village/savanna/zombie/streets/straight_05", $$7), 3),
+               Pair.of(eiq.a("village/savanna/zombie/streets/straight_06", $$7), 4),
+               Pair.of(eiq.a("village/savanna/zombie/streets/straight_08", $$7), 4),
+               Pair.of(eiq.a("village/savanna/zombie/streets/straight_09", $$7), 4),
+               Pair.of(eiq.a("village/savanna/zombie/streets/straight_10", $$7), 4),
+               Pair.of(eiq.a("village/savanna/zombie/streets/straight_11", $$7), 4),
+               Pair.of(eiq.a("village/savanna/zombie/streets/crossroad_02", $$7), 1),
+               Pair.of(eiq.a("village/savanna/zombie/streets/crossroad_03", $$7), 2),
+               new Pair[]{
+                  Pair.of(eiq.a("village/savanna/zombie/streets/crossroad_04", $$7), 2),
+                  Pair.of(eiq.a("village/savanna/zombie/streets/crossroad_05", $$7), 2),
+                  Pair.of(eiq.a("village/savanna/zombie/streets/crossroad_06", $$7), 2),
+                  Pair.of(eiq.a("village/savanna/zombie/streets/crossroad_07", $$7), 2),
+                  Pair.of(eiq.a("village/savanna/zombie/streets/split_01", $$7), 2),
+                  Pair.of(eiq.a("village/savanna/zombie/streets/split_02", $$7), 2),
+                  Pair.of(eiq.a("village/savanna/zombie/streets/turn_01", $$7), 3)
+               }
+            ),
+            eis.a.a
          )
       );
-      $$0.a(egj.m, new ejb(a($$1.b(avq.w), eha.a), ejb.a.b, 0.3F, 0.9F));
-      $$0.a(egj.n, new ejb(a($$1.b(avq.x), eha.a), ejb.a.a, 0.3F, 0.9F));
-      $$0.a(egj.o, new eiv(a($$1.b(avq.R), Map.of(bsd.a, new egw(egw.a.a, eiv.d)), dvv.b.h, eha.a)));
-      $$0.a(egj.p, new eix(a($$1.b(avq.S), dvv.b.h, eha.c), eez.a(dwt.a(32), dwt.c(2))));
-      $$0.a(egj.q, new eim(a($$1.b(avq.W), eha.a)));
-      $$0.a(egj.r, new eii(a($$1.b(avq.p), dvv.b.d, eha.a)));
-      $$0.a(egj.s, new eip(a($$1.b(avq.T), eha.a), $$2.b(qh.a), 6, eev.a(dwt.a(33)), false));
-      $$0.a(egj.t, new eip(a($$1.b(avq.L), eha.c), $$2.b(qr.a), 6, eev.a(dwt.a(0)), true, dvz.a.a));
-      $$0.a(egj.u, new eip(a($$1.b(avq.K), eha.c), $$2.b(qn.a), 6, eev.a(dwt.a(0)), true, dvz.a.a));
-      $$0.a(egj.v, new eip(a($$1.b(avq.M), eha.c), $$2.b(qu.a), 6, eev.a(dwt.a(0)), true, dvz.a.a));
-      $$0.a(egj.w, new eip(a($$1.b(avq.N), eha.c), $$2.b(qv.a), 6, eev.a(dwt.a(0)), true, dvz.a.a));
-      $$0.a(egj.x, new eip(a($$1.b(avq.O), eha.c), $$2.b(qz.a), 6, eev.a(dwt.a(0)), true, dvz.a.a));
-      $$0.a(
-         egj.y,
-         new ejd(
-            a($$1.b(avq.E), eha.a),
-            List.of(new ejd.a(ejc.b.e, 1.0F, 0.2F, false, false, true, false, 0.5F), new ejd.a(ejc.b.a, 0.5F, 0.2F, false, false, true, false, 0.5F))
+      qv.a(
+         $$0,
+         "village/savanna/houses",
+         new eis(
+            $$11,
+            ImmutableList.of(
+               Pair.of(eiq.a("village/savanna/houses/savanna_small_house_1"), 2),
+               Pair.of(eiq.a("village/savanna/houses/savanna_small_house_2"), 2),
+               Pair.of(eiq.a("village/savanna/houses/savanna_small_house_3"), 2),
+               Pair.of(eiq.a("village/savanna/houses/savanna_small_house_4"), 2),
+               Pair.of(eiq.a("village/savanna/houses/savanna_small_house_5"), 2),
+               Pair.of(eiq.a("village/savanna/houses/savanna_small_house_6"), 2),
+               Pair.of(eiq.a("village/savanna/houses/savanna_small_house_7"), 2),
+               Pair.of(eiq.a("village/savanna/houses/savanna_small_house_8"), 2),
+               Pair.of(eiq.a("village/savanna/houses/savanna_medium_house_1"), 2),
+               Pair.of(eiq.a("village/savanna/houses/savanna_medium_house_2"), 2),
+               Pair.of(eiq.a("village/savanna/houses/savanna_butchers_shop_1"), 2),
+               Pair.of(eiq.a("village/savanna/houses/savanna_butchers_shop_2"), 2),
+               new Pair[]{
+                  Pair.of(eiq.a("village/savanna/houses/savanna_tool_smith_1"), 2),
+                  Pair.of(eiq.a("village/savanna/houses/savanna_fletcher_house_1"), 2),
+                  Pair.of(eiq.a("village/savanna/houses/savanna_shepherd_1"), 7),
+                  Pair.of(eiq.a("village/savanna/houses/savanna_armorer_1"), 1),
+                  Pair.of(eiq.a("village/savanna/houses/savanna_fisher_cottage_1"), 3),
+                  Pair.of(eiq.a("village/savanna/houses/savanna_tannery_1"), 2),
+                  Pair.of(eiq.a("village/savanna/houses/savanna_cartographer_1"), 2),
+                  Pair.of(eiq.a("village/savanna/houses/savanna_library_1"), 2),
+                  Pair.of(eiq.a("village/savanna/houses/savanna_mason_1"), 2),
+                  Pair.of(eiq.a("village/savanna/houses/savanna_weaponsmith_1"), 2),
+                  Pair.of(eiq.a("village/savanna/houses/savanna_weaponsmith_2"), 2),
+                  Pair.of(eiq.a("village/savanna/houses/savanna_temple_1"), 2),
+                  Pair.of(eiq.a("village/savanna/houses/savanna_temple_2"), 3),
+                  Pair.of(eiq.a("village/savanna/houses/savanna_large_farm_1", $$8), 4),
+                  Pair.of(eiq.a("village/savanna/houses/savanna_large_farm_2", $$8), 6),
+                  Pair.of(eiq.a("village/savanna/houses/savanna_small_farm", $$8), 4),
+                  Pair.of(eiq.a("village/savanna/houses/savanna_animal_pen_1"), 2),
+                  Pair.of(eiq.a("village/savanna/houses/savanna_animal_pen_2"), 2),
+                  Pair.of(eiq.a("village/savanna/houses/savanna_animal_pen_3"), 2),
+                  Pair.of(eiq.g(), 5)
+               }
+            ),
+            eis.a.b
          )
       );
-      $$0.a(egj.z, new ejd(a($$1.b(avq.z), eha.a), new ejd.a(ejc.b.b, 0.0F, 0.0F, false, false, false, false, 1.0F)));
-      $$0.a(egj.A, new ejd(a($$1.b(avq.A), eha.a), new ejd.a(ejc.b.a, 0.5F, 0.8F, true, true, false, false, 1.0F)));
-      $$0.a(egj.B, new ejd(a($$1.b(avq.C), eha.a), new ejd.a(ejc.b.c, 0.0F, 0.5F, false, true, false, false, 1.0F)));
-      $$0.a(
-         egj.C,
-         new ejd(
-            a($$1.b(avq.D), eha.a),
-            List.of(new ejd.a(ejc.b.d, 1.0F, 0.2F, false, false, true, false, 0.5F), new ejd.a(ejc.b.a, 0.5F, 0.2F, false, false, true, false, 0.5F))
+      qv.a(
+         $$0,
+         "village/savanna/zombie/houses",
+         new eis(
+            $$12,
+            ImmutableList.of(
+               Pair.of(eiq.a("village/savanna/zombie/houses/savanna_small_house_1", $$6), 2),
+               Pair.of(eiq.a("village/savanna/zombie/houses/savanna_small_house_2", $$6), 2),
+               Pair.of(eiq.a("village/savanna/zombie/houses/savanna_small_house_3", $$6), 2),
+               Pair.of(eiq.a("village/savanna/zombie/houses/savanna_small_house_4", $$6), 2),
+               Pair.of(eiq.a("village/savanna/zombie/houses/savanna_small_house_5", $$6), 2),
+               Pair.of(eiq.a("village/savanna/zombie/houses/savanna_small_house_6", $$6), 2),
+               Pair.of(eiq.a("village/savanna/zombie/houses/savanna_small_house_7", $$6), 2),
+               Pair.of(eiq.a("village/savanna/zombie/houses/savanna_small_house_8", $$6), 2),
+               Pair.of(eiq.a("village/savanna/zombie/houses/savanna_medium_house_1", $$6), 2),
+               Pair.of(eiq.a("village/savanna/zombie/houses/savanna_medium_house_2", $$6), 2),
+               Pair.of(eiq.a("village/savanna/houses/savanna_butchers_shop_1", $$6), 2),
+               Pair.of(eiq.a("village/savanna/houses/savanna_butchers_shop_2", $$6), 2),
+               new Pair[]{
+                  Pair.of(eiq.a("village/savanna/houses/savanna_tool_smith_1", $$6), 2),
+                  Pair.of(eiq.a("village/savanna/houses/savanna_fletcher_house_1", $$6), 2),
+                  Pair.of(eiq.a("village/savanna/houses/savanna_shepherd_1", $$6), 2),
+                  Pair.of(eiq.a("village/savanna/houses/savanna_armorer_1", $$6), 1),
+                  Pair.of(eiq.a("village/savanna/houses/savanna_fisher_cottage_1", $$6), 2),
+                  Pair.of(eiq.a("village/savanna/houses/savanna_tannery_1", $$6), 2),
+                  Pair.of(eiq.a("village/savanna/houses/savanna_cartographer_1", $$6), 2),
+                  Pair.of(eiq.a("village/savanna/houses/savanna_library_1", $$6), 2),
+                  Pair.of(eiq.a("village/savanna/houses/savanna_mason_1", $$6), 2),
+                  Pair.of(eiq.a("village/savanna/houses/savanna_weaponsmith_1", $$6), 2),
+                  Pair.of(eiq.a("village/savanna/houses/savanna_weaponsmith_2", $$6), 2),
+                  Pair.of(eiq.a("village/savanna/houses/savanna_temple_1", $$6), 1),
+                  Pair.of(eiq.a("village/savanna/houses/savanna_temple_2", $$6), 3),
+                  Pair.of(eiq.a("village/savanna/houses/savanna_large_farm_1", $$6), 4),
+                  Pair.of(eiq.a("village/savanna/zombie/houses/savanna_large_farm_2", $$6), 4),
+                  Pair.of(eiq.a("village/savanna/houses/savanna_small_farm", $$6), 4),
+                  Pair.of(eiq.a("village/savanna/houses/savanna_animal_pen_1", $$6), 2),
+                  Pair.of(eiq.a("village/savanna/zombie/houses/savanna_animal_pen_2", $$6), 2),
+                  Pair.of(eiq.a("village/savanna/zombie/houses/savanna_animal_pen_3", $$6), 2),
+                  Pair.of(eiq.g(), 5)
+               }
+            ),
+            eis.a.b
          )
       );
-      $$0.a(egj.D, new ejd(a($$1.b(avq.B), eha.a), new ejd.a(ejc.b.c, 0.0F, 0.8F, false, false, true, false, 1.0F)));
-      $$0.a(egj.E, new ejd(a($$1.b(avq.V), eha.a), new ejd.a(ejc.b.f, 0.5F, 0.0F, false, false, false, true, 1.0F)));
       $$0.a(
-         egj.F,
-         new eip(
-            a($$1.b(avq.U), Arrays.stream(bsd.values()).collect(Collectors.toMap($$0x -> $$0x, $$0x -> new egw(egw.a.b, boa.c()))), dvv.b.h, eha.d),
-            $$2.b(qc.a),
-            Optional.of(new akh("city_anchor")),
-            7,
-            eev.a(dwt.a(-27)),
-            false,
-            Optional.empty(),
-            116,
-            List.of()
+         b,
+         new eis(
+            $$10,
+            ImmutableList.of(
+               Pair.of(eiq.a("village/plains/terminators/terminator_01", $$7), 1),
+               Pair.of(eiq.a("village/plains/terminators/terminator_02", $$7), 1),
+               Pair.of(eiq.a("village/plains/terminators/terminator_03", $$7), 1),
+               Pair.of(eiq.a("village/plains/terminators/terminator_04", $$7), 1),
+               Pair.of(eiq.a("village/savanna/terminators/terminator_05", $$7), 1)
+            ),
+            eis.a.a
          )
       );
-      $$0.a(egj.G, new eip(a($$1.b(avq.P), Map.of(), dvv.b.d, eha.b), $$2.b(rb.a), 7, eev.a(dwt.a(-15)), false, dvz.a.a));
+      $$0.a(
+         c,
+         new eis(
+            $$10,
+            ImmutableList.of(
+               Pair.of(eiq.a("village/plains/terminators/terminator_01", $$7), 1),
+               Pair.of(eiq.a("village/plains/terminators/terminator_02", $$7), 1),
+               Pair.of(eiq.a("village/plains/terminators/terminator_03", $$7), 1),
+               Pair.of(eiq.a("village/plains/terminators/terminator_04", $$7), 1),
+               Pair.of(eiq.a("village/savanna/zombie/terminators/terminator_05", $$7), 1)
+            ),
+            eis.a.a
+         )
+      );
+      qv.a($$0, "village/savanna/trees", new eis($$10, ImmutableList.of(Pair.of(eiq.a($$2), 1)), eis.a.b));
+      qv.a(
+         $$0,
+         "village/savanna/decor",
+         new eis(
+            $$10,
+            ImmutableList.of(
+               Pair.of(eiq.a("village/savanna/savanna_lamp_post_01"), 4),
+               Pair.of(eiq.a($$2), 4),
+               Pair.of(eiq.a($$3), 4),
+               Pair.of(eiq.a($$4), 1),
+               Pair.of(eiq.g(), 4)
+            ),
+            eis.a.b
+         )
+      );
+      qv.a(
+         $$0,
+         "village/savanna/zombie/decor",
+         new eis(
+            $$10,
+            ImmutableList.of(
+               Pair.of(eiq.a("village/savanna/savanna_lamp_post_01", $$6), 4),
+               Pair.of(eiq.a($$2), 4),
+               Pair.of(eiq.a($$3), 4),
+               Pair.of(eiq.a($$4), 1),
+               Pair.of(eiq.g(), 4)
+            ),
+            eis.a.b
+         )
+      );
+      qv.a(
+         $$0,
+         "village/savanna/villagers",
+         new eis(
+            $$10,
+            ImmutableList.of(
+               Pair.of(eiq.a("village/savanna/villagers/nitwit"), 1),
+               Pair.of(eiq.a("village/savanna/villagers/baby"), 1),
+               Pair.of(eiq.a("village/savanna/villagers/unemployed"), 10)
+            ),
+            eis.a.b
+         )
+      );
+      qv.a(
+         $$0,
+         "village/savanna/zombie/villagers",
+         new eis(
+            $$10,
+            ImmutableList.of(Pair.of(eiq.a("village/savanna/zombie/villagers/nitwit"), 1), Pair.of(eiq.a("village/savanna/zombie/villagers/unemployed"), 10)),
+            eis.a.b
+         )
+      );
    }
 }
